package com.thoughtworks.examonline.coursecontext.domain.model.course;

/**
 * @author gitqh
 */
public enum CourseStateEnum {
    CREATED, PUBLISHED
}
